# base_ML_Project

./: .gitignore  Colab_version.ipynb  Tainas.py  analysis_functions.py  app.py  data_functions.py  model_functions.py  pyproject.toml
